--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,7 @@ jobs:
     steps: 
     - name: build docker image
       run: |
+        cd ../infra_project/
         docker build .
   # build_and_push_to_docker_hub:
   #   name: Push Docker image to Docker Hub
