--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,37 +35,37 @@ jobs:
         python -m flake8
         cd infra_project/
         python manage.py test
-  build:
-    runs-on: ubuntu-latest
-    needs: tests
-    steps: 
-    - uses: actions/checkout@v2
-    - name: build docker image
-      run: |
-        cd ../
-        docker build .
-  # build_and_push_to_docker_hub:
-  #   name: Push Docker image to Docker Hub
+  # build:
   #   runs-on: ubuntu-latest
   #   needs: tests
-  #   steps:
-  #     - name: Check out the repo
-  #       # Проверка доступности репозитория Docker Hub для workflow
-  #       uses: actions/checkout@v2 
-  #     - name: Set up Docker Buildx
-  #       # Вызов сборщика контейнеров docker
-  #       uses: docker/setup-buildx-action@v1 
-  #     - name: Login to Docker 
-  #       # Запуск скрипта авторизации на Docker Hub
-  #       uses: docker/login-action@v1 
-  #       with:
-  #         username: ${{ secrets.DOCKER_USERNAME }} 
-  #         password: ${{ secrets.DOCKER_PASSWORD }}
-  #     - name: Push to Docker Hub
-  #       # Пуш образа в Docker Hub 
-  #       uses: docker/build-push-action@v2 
-  #       with:
-  #         push: true
-  #         tags: ${{ secrets.DOCKER_USERNAME }}/infra:latest
+  #   steps: 
+  #   - uses: actions/checkout@v2
+  #   - name: build docker image
+  #     run: |
+  #       cd ../
+  #       docker build .
+  build_and_push_to_docker_hub:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        # Проверка доступности репозитория Docker Hub для workflow
+        uses: actions/checkout@v2 
+      - name: Set up Docker Buildx
+        # Вызов сборщика контейнеров docker
+        uses: docker/setup-buildx-action@v1 
+      - name: Login to Docker 
+        # Запуск скрипта авторизации на Docker Hub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }} 
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        # Пуш образа в Docker Hub 
+        uses: docker/build-push-action@v2 
+        with:
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/infra:latest
         
     
