--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,15 +35,6 @@ jobs:
         python -m flake8
         cd infra_project/
         python manage.py test
-  # build:
-  #   runs-on: ubuntu-latest
-  #   needs: tests
-  #   steps: 
-  #   - uses: actions/checkout@v2
-  #   - name: build docker image
-  #     run: |
-  #       cd ../
-  #       docker build .
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
@@ -67,5 +58,22 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/infra:latest
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+    - name: executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        passphrase: ${{ secrets.PASSPHRASE }}
+        script: |
+          # Выполняет pull образа с DockerHub
+          sudo docker pull sergosolo/infra
+          #остановка всех контейнеров
+          sudo docker stop $(sudo docker ps -a -q)
+          sudo docker run --rm -d -p 5000:5000 sergosolo/infra
         
     
